# bibi-cli

./: Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  build.rs  channels.json
src/: channels.rs  cli.rs  config.rs  format.rs  formatter.rs  main.rs  schedule_parser.rs  types.rs
types/: Cargo.toml
types/src/: lib.rs
