[package]
name = "bibi"
description = "A simple Hololive Schedule CLI tool."
version = "0.2.0"
authors = ["Miika Kurvinen <myuwi@pm.me>"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.1"
clap = { version = "3.1.6", features = ["derive"] }
owo-colors = "3.2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
unicode-width = "0.1.7"
scraper = "0.13.0"
