[package]
name = "bibi"
description = "A simple Hololive Schedule CLI tool."
version = "0.3.0"
authors = ["Miika Kurvinen <myuwi@proton.me>"]
license = "MIT"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0"
atty = "0.2.14"
chrono = "0.4.40"
chrono-tz = "0.10.1"
clap = { version = "4.5.32", features = ["derive"] }
directories = "6.0.0"
futures = "0.3"
lazy_static = "1.5.0"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.20"
unicode-width = "0.2.0"
